--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/views/main.tsx"></script>
+    <script type="module" src="/vite/react/main.tsx"></script>
   </body>
 </html>
